authentication against MySQL

--- a/src/main/resources/public/style/css/shopping.css
+++ b/src/main/resources/public/style/css/shopping.css
@@ -5,3 +5,20 @@
 .navbar-btn{
     margin-left: 20px; !important
 }
+
+.centered {
+    display: table;
+    margin: 0 auto;
+}
+
+.centered-text{
+    text-align: center;
+}
+
+#shoppingList {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+}
+
+#shopping-list {
+    list-style-type: none;
+}
