--- a/src/main/resources/public/style/css/shopping.css
+++ b/src/main/resources/public/style/css/shopping.css
@@ -31,3 +31,13 @@
 .done {
     text-decoration: line-through;
 }
+
+#shopping-list{
+    list-style-type: none;
+}
+
+[ng-click],
+[data-ng-click],
+[x-ng-click] {
+    cursor: pointer;
+}
