init rootScope.authenticated in navigation.js and don't use redirect to login for this

--- a/src/main/resources/public/style/css/shopping.css
+++ b/src/main/resources/public/style/css/shopping.css
@@ -41,3 +41,7 @@
 [x-ng-click] {
     cursor: pointer;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
+}
