--- a/src/main/resources/public/style/css/shopping.css
+++ b/src/main/resources/public/style/css/shopping.css
@@ -47,6 +47,10 @@
     padding-left: 0;
 }
 
+ul {
+    margin-bottom: 0px;
+}
+
 [ng-click],
 [data-ng-click],
 [x-ng-click] {
@@ -69,12 +73,12 @@
 }
 
 .shadowed {
-    -moz-box-shadow: 10px 10px 7px #ccc;
-    -webkit-box-shadow: 10px 10px 7px #ccc;
-    box-shadow: 10px 10px 7px #ccc;
+    -moz-box-shadow: 10px 5px 10px #ccc;
+    -webkit-box-shadow: 10px 5px 10px #ccc;
+    box-shadow: 10px 5px 10px #ccc;
 }
 
 .box{
-    padding: 10px;
-    margin-bottom: 10px;
+    padding: 5px;
+    margin-bottom: 5px;
 }
