--- a/src/main/resources/public/style/css/shopping.css
+++ b/src/main/resources/public/style/css/shopping.css
@@ -6,17 +6,16 @@
     margin-left: 20px; !important
 }
 
-.centered {
-    display: table;
-    margin: 0 auto;
-}
-
 .centered-text{
     text-align: center;
 }
 
-#main{
+.item-view{
     text-align : left;
+}
+
+.options{
+    text-align: right;
 }
 
 .invisible-button {
@@ -28,17 +27,9 @@
     display:inline;
 }
 
-.pagination{
-    color: #555 !important;
-}
-
-.pagination .active {
-    background-color: #e7e7e7 !important;
-    border-color: #D3D3D3 !important;
-}
-
-.done {
+.bought {
     text-decoration: line-through;
+    color: #a4a4a4;
 }
 
 #shopping-list{
@@ -47,12 +38,34 @@
     padding-left: 0;
 }
 
-ul {
-    margin-bottom: 0px;
+#shopping-list li{
+    margin-right: 4px;
+    margin-left: 4px;
 }
 
-.item-view {
-    overflow:auto;
+#shopping-list li:active{
+    margin-right: 7px;
+    margin-left: 7px;
+    -moz-box-shadow: 2px 1px 10px #ccc;
+    -webkit-box-shadow: 2px 1px 10px #ccc;
+    box-shadow: 2px 1px 10px #ccc;
+}
+
+#shopping-list li.to-buy{
+    margin-left: 0;
+    margin-right: 0;
+}
+
+#shopping-list li.to-buy:active{
+    margin-right: 7px;
+    margin-left: 7px;
+    -moz-box-shadow: 2px 1px 10px #ccc;
+    -webkit-box-shadow: 2px 1px 10px #ccc;
+    box-shadow: 2px 1px 10px #ccc;
+}
+
+ul {
+    margin-bottom: 0px;
 }
 
 [ng-click],
@@ -71,15 +84,21 @@ ul {
     border-color: #D3D3D3;
 }
 
-.light-green{
-    background: #a4df07;
-    border-color: #92cd07;
+.to-buy{
+    background-color: #f0ad4e;
+    border-color: #eea236;
 }
 
-.shadowed {
+.shadowed-high {
     -moz-box-shadow: 10px 5px 10px #ccc;
     -webkit-box-shadow: 10px 5px 10px #ccc;
     box-shadow: 10px 5px 10px #ccc;
+}
+
+.shadowed-low {
+    -moz-box-shadow: 4px 2px 10px #ccc;
+    -webkit-box-shadow: 4px 2px 10px #ccc;
+    box-shadow: 4px 2px 10px #ccc;
 }
 
 .box{
